# ai-build-games-humans-refine_no_random

./: AGENTS.md  LICENSE  README.md
.agents/rules/: CODE_QUALITY.md  FORMATTING.md  NAMING.md  RULES.md  STATIC_TYPING.md
.agents/rules/gdscript-coding-standards/: CODE_ORDER.md
.agents/skills/creating-godot-procedural-audio/: SKILL.md
.agents/skills/creating-godot-procedural-audio/references/: sound-design-guide.md
.agents/skills/designing-mini-games/: SKILL.md
.agents/skills/designing-mini-games/references/: mini-game-design-guide.md
.agents/skills/directing-game-visuals/: SKILL.md
.agents/skills/directing-game-visuals/references/: visual-design-guide.md
.agents/skills/evaluating-gameplay-balance/: SKILL.md
.agents/skills/evaluating-gameplay-balance/references/: balance-patterns.md  godot-implementation-notes.md  improvement-analysis.md  log-contract.md  simulation-harness.md
.agents/skills/running-headless-godot/: SKILL.md
.agents/skills/running-headless-godot/references/: export_and_import.md  headless_cli.md  scene_editing_via_godot.md  testing_headless.md
.agents/skills/scaffolding-godot-mini-games/: SKILL.md
.agents/skills/scaffolding-godot-mini-games/references/: godot-balance-pattern-examples.md  visual-implementation-patterns.md
.agents/skills/styling-web-game-typography/: SKILL.md
.agents/skills/styling-web-game-typography/references/: godot-patterns.md  (+1 more)
data/tags/: mechanism_tags.csv  structure_tags.csv  visual_tags.csv
scripts/python/godot-init/: godot-init命令使用说明.md  pyproject.toml  setup_godot_project.py
(+3 files in other folders)
